--- a/sources/res/layout/tampil.xml
+++ b/sources/res/layout/tampil.xml
@@ -5,25 +5,25 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 		
-     <LinearLayout
-        android:id="@+id/root"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical" 
-		tools:ignore="UselessParent">   
+ <LinearLayout
+    android:id="@+id/root"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical" 
+	tools:ignore="UselessParent">   
 		
-<LinearLayout
-	android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/biru">
+  <LinearLayout
+	 android:orientation="horizontal"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:background="@color/biru">
     
-    <ImageButton
+    <ImageView
         android:contentDescription="@null"
 		android:layout_width="0dp"
 		android:layout_weight="20"
 		android:layout_height="30dp"
-		android:src="@drawable/nkb" />
+	    android:src="@drawable/ic_launcher" />
             
     <TextView
     	android:id="@+id/pasal"
@@ -35,7 +35,7 @@
         android:layout_marginTop="5dp"
         android:text="" />
         
-    <ImageButton
+    <ImageView
 	    android:id="@+id/exit"
 	    android:contentDescription="@null"
 		android:layout_width="0dp"
@@ -45,7 +45,7 @@
 		android:scaleType="center"
 		android:src="@drawable/exit" />
         
-</LinearLayout>
+  </LinearLayout>
  
       <ScrollView 
           android:id="@+id/textAreaScroller" 
@@ -63,6 +63,7 @@
     
      	</ScrollView>
      	
-     </LinearLayout>   
-    
+  
+ </LinearLayout>
+ 
 </FrameLayout>
